LIS-19 fix following in user account

--- a/app/cells/decidim/following/show.erb
+++ b/app/cells/decidim/following/show.erb
@@ -1,14 +1,18 @@
-<div class="empty-notifications callout secondary <%= "hide" if followings.any? %>">
+<%# widok z wersji 0.24 %>
+
+<div class="empty-notifications callout secondary <%= "hide" if public_followings.any? %>">
   <p><%= t("decidim.following.no_followings") %></p>
 </div>
+
 <% if current_user&.nickname == params[:nickname] %>
   <% if context[:controller].class.name == 'Decidim::ProfilesController' %>
     <p class='callout announcement mb-sm secondary cell-announcement'><%= t('devise.user_following_info') %></p>
   <% end %>
 <% end %>
+
 <div class="row small-up-1 medium-up-2 card-grid">
-  <% followings.each do |following| %>
+  <% public_followings.each do |following| %>
     <%= card_for following, context: { label: true, show_space: true } %>
   <% end %>
 </div>
-<%= decidim_paginate followings %>
+<%= decidim_paginate public_followings %>
