--- a/decidim-surveys_extended/app/views/decidim/forms/admin/questionnaires/_form.html.erb
+++ b/decidim-surveys_extended/app/views/decidim/forms/admin/questionnaires/_form.html.erb
@@ -95,22 +95,23 @@
                 form: question_form,
                 id: tabs_id_for_question(question),
                 editable: questionnaire.questions_editable? %>
+        <% elsif question.metrics? %>
+          <%= render "decidim/forms/admin/questionnaires/metrics_question",
+                form: question_form,
+                id: tabs_id_for_question(blank_question),
+                editable: questionnaire.questions_editable?,
+                display_condition_template_selector: "#display-condition-template-dummy" %>
+          <%= render "decidim/forms/admin/questionnaires/display_condition_template", form: question_form, editable: questionnaire.questions_editable?, template_id: "display-condition-template-#{index}" %>
+          <%= render "decidim/forms/admin/questionnaires/answer_option_template", form: question_form, editable: questionnaire.questions_editable?, template_id: "answer-option-template-#{index}" %>
+          <%= render "decidim/forms/admin/questionnaires/matrix_row_template", form: question_form, editable: questionnaire.questions_editable?, template_id: "matrix-row-template-#{index}" %>
         <% else %>
-          <% if question.metrics? %>
-            <%= render "decidim/forms/admin/questionnaires/metrics_question",
-                  form: question_form,
-                  id: tabs_id_for_question(blank_question),
-                  editable: questionnaire.questions_editable?,
-                  display_condition_template_selector: "#display-condition-template-dummy" %>
-          <% else %>
-            <%= render "decidim/forms/admin/questionnaires/question",
-                  form: question_form,
-                  id: tabs_id_for_question(question),
-                  editable: questionnaire.questions_editable?,
-                  display_condition_template_selector: "#display-condition-template-#{index}",
-                  answer_option_template_selector: "#answer-option-template-#{index}",
-                  matrix_row_template_selector: "#matrix-row-template-#{index}" %>
-          <% end %>
+          <%= render "decidim/forms/admin/questionnaires/question",
+                form: question_form,
+                id: tabs_id_for_question(question),
+                editable: questionnaire.questions_editable?,
+                display_condition_template_selector: "#display-condition-template-#{index}",
+                answer_option_template_selector: "#answer-option-template-#{index}",
+                matrix_row_template_selector: "#matrix-row-template-#{index}" %>
           <%= render "decidim/forms/admin/questionnaires/display_condition_template", form: question_form, editable: questionnaire.questions_editable?, template_id: "display-condition-template-#{index}" %>
           <%= render "decidim/forms/admin/questionnaires/answer_option_template", form: question_form, editable: questionnaire.questions_editable?, template_id: "answer-option-template-#{index}" %>
           <%= render "decidim/forms/admin/questionnaires/matrix_row_template", form: question_form, editable: questionnaire.questions_editable?, template_id: "matrix-row-template-#{index}" %>
