--- a/decidim-assemblies-extended/app/cells/decidim/assemblies/assembly_member/new_show.erb
+++ b/decidim-assemblies-extended/app/cells/decidim/assemblies/assembly_member/new_show.erb
@@ -7,7 +7,7 @@
             <div class="author author--flex">
               <% if has_profile? %>
                 <%= link_to profile_url, class: "author__avatar" do %>
-                  <%= image_tag model.avatar_url(:big), alt: "member-avatar" %>
+                  <%= image_tag model.avatar.url(:big), alt: "member-avatar" %>
                 <% end %>
                 <div>
                   <div class="author__name--container">
