--- a/decidim-core-extended/app/cells/decidim/profile_sidebar/new_show.erb
+++ b/decidim-core-extended/app/cells/decidim/profile_sidebar/new_show.erb
@@ -1,5 +1,5 @@
 <div class="card profile--sidebar">
-  <%= image_tag profile_user.avatar.url(:profile), class: "card__image card__image--larger", alt: "avatar #{profile_user.name}" %>
+  <%= image_tag profile_user.avatar_url(:profile), class: "card__image card__image--larger", alt: "avatar #{profile_user.name}" %>
   <div class="card__content">
     <h1 class="profile--sidebar--title">
       <strong><%= profile_user.name %></strong>
