Fix assets include issues

--- a/decidim-admin_extended/app/views/layouts/decidim/admin/_header.html.erb
+++ b/decidim-admin_extended/app/views/layouts/decidim/admin/_header.html.erb
@@ -2,6 +2,8 @@
 <%= csrf_meta_tags %>
 <%= stylesheet_pack_tag "decidim_admin", media: "all" %>
 <%= javascript_pack_tag "decidim_admin", defer: false %>
+<%#= javascript_pack_tag "decidim_admin_extended", defer: false %>
+
 <%= organization_colors %>
 <%= snippets.display(:head) %>
 <%= render "layouts/decidim/admin/header_extra" %>
