--- a/decidim-core-extended/app/views/decidim/devise/registrations/_form.html.erb
+++ b/decidim-core-extended/app/views/decidim/devise/registrations/_form.html.erb
@@ -29,7 +29,7 @@
       </div>
 
       <div class="field">
-        <%= f.password_field :password, help_text: t("decidim.devise.registrations.new.password_help", minimun_characters: ::PasswordValidator::MINIMUM_LENGTH), autocomplete: "off" %>
+        <%= f.password_field :password, help_text: t("decidim.devise.registrations.new.password_help", minimum_characters: ::PasswordValidator::MINIMUM_LENGTH), autocomplete: "off" %>
       </div>
 
       <div class="field">
