--- a/decidim-core-extended/app/views/decidim/devise/invitations/edit.html.erb
+++ b/decidim-core-extended/app/views/decidim/devise/invitations/edit.html.erb
@@ -27,7 +27,7 @@
 
             <% if f.object.class.require_password_on_accepting %>
               <div class="field">
-                <p><%= f.password_field :password, help_text: t(".password_help", minimun_characters: ::Devise.password_length.min), required: "required", autocomplete: "off", minlength: ::Devise.password_length.min, maxlength: ::Devise.password_length.max %></p>
+                <p><%= f.password_field :password, help_text: t(".password_help", minimum_characters: ::Devise.password_length.min), required: "required", autocomplete: "off", minlength: ::Devise.password_length.min, maxlength: ::Devise.password_length.max %></p>
               </div>
 
               <div class="field">
