--- a/decidim-core-extended/app/views/devise/mailer/invite_private_user.text.erb
+++ b/decidim-core-extended/app/views/devise/mailer/invite_private_user.text.erb
@@ -1,6 +1,6 @@
 <%= t("devise.mailer.invitation_instructions.hello", email: @resource.name) %>
 
-<% private_user_to = Decidim::ParticipatorySpacePrivateUser.where(user: @resource).last.privatable_to %>
+<% private_user_to = Decidim::ParticipatorySpacePrivateUser.where(user: @resource).last&.privatable_to %>
 <% if @resource.invited_by.present? %>
   <%= t("devise.mailer.invitation_instructions.invited_you_as_private_user",
                 invited_by: @resource.invited_by.name,
