remove automatic_question_numbering from PDF exports

--- a/decidim-admin_extended/app/views/decidim/forms/admin/questionnaires/answers/export/_answer_new.html.erb
+++ b/decidim-admin_extended/app/views/decidim/forms/admin/questionnaires/answers/export/_answer_new.html.erb
@@ -25,7 +25,11 @@
   <div class="answers">
     <% participant.answers.each_with_index do |answer, index| %>
       <h3 class="question">
-        <%= index + 1 %>. <%= answer.question %>
+        <% if automatic_question_numbering %>
+          <%= index + 1 %>. <%= answer.question %>
+        <% else %>
+          <%= answer.question %>
+        <% end %>
       </h3>
       <p><%= answer.body %></p>
     <% end %>
