upgrade / view changes

--- a/app/views/layouts/decidim/mailer.html.erb
+++ b/app/views/layouts/decidim/mailer.html.erb
@@ -47,7 +47,12 @@
                         <table>
                           <tr>
                             <th>
-                              
+                              <%# Usuniete z szablonu %>
+                              <%# if @organization.official_img_header? %>
+                                <%#= link_to @organization.official_url do %>
+                                  <%#= image_tag @organization.official_img_header.url.to_s , alt: "", style: "max-height: 50px", class: "float-right" %>
+                                <%# end %>
+                              <%# end %>
                             </th>
                           </tr>
                         </table>
