feat: restore EU footer (LIS-78)

--- a/decidim-core-extended/app/views/layouts/decidim/_head.html.erb
+++ b/decidim-core-extended/app/views/layouts/decidim/_head.html.erb
@@ -27,6 +27,7 @@
 <%= organization_colors %>
 <%= javascript_pack_tag "decidim_core", defer: false %>
 <%= javascript_pack_tag "decidim_core_extended", defer: false %>
+<%= javascript_pack_tag "decidim_gdynia", defer: false %>
 <%#= javascript_pack_tag "decidim_assemblies_extended", defer: false %>
 <%#= javascript_pack_tag "decidim_processes_extended", defer: false %>
 
