--- a/decidim-module-gdynia/app/packs/stylesheets/decidim/gdynia/gdynia.scss
+++ b/decidim-module-gdynia/app/packs/stylesheets/decidim/gdynia/gdynia.scss
@@ -1,1 +1,24 @@
 /* css for decidim_gdynia */
+
+/************* footer *************/
+
+.ue-footer {
+  padding: 5px 0 15px 0;
+  background-color: #fff;
+  color: #1a181d;
+}
+
+.ue-footer img {
+  width: 100%;
+  max-width: 800px;
+  display: block;
+  margin: auto;
+}
+
+.ue-footer .ue-info-text {
+  margin: auto;
+  padding: 5px 10px 0px 10px;
+  text-align: center;
+  max-width: 600px;
+  font-size: 0.9rem;
+}
