feat: remove hero container background gradient (LIS-86)

--- a/decidim-module-gdynia/app/packs/stylesheets/decidim/gdynia/gdynia.scss
+++ b/decidim-module-gdynia/app/packs/stylesheets/decidim/gdynia/gdynia.scss
@@ -1,5 +1,11 @@
 /* css for decidim_gdynia */
 
+/************* hero *************/
+
+.hero__container {
+  background-image: var(--hero-image);
+}
+
 /************* footer *************/
 
 .ue-footer {
