feature LIS-98 add icons with links in main bar links desktop

--- a/decidim-module-gdynia/app/views/layouts/decidim/header/_main_links_desktop.html.erb
+++ b/decidim-module-gdynia/app/views/layouts/decidim/header/_main_links_desktop.html.erb
@@ -1,4 +1,16 @@
 <div>
+  <%= link_to decidim_participatory_processes.participatory_processes_path, class: "main-bar__links-desktop__item", "aria-label": t("decidim.menu.help") do %>
+    <%= icon "loop-right-fill" %><span><%= t("decidim.menu.processes") %></span>
+  <% end %>
+</div>
+
+<div>
+  <%= link_to decidim_assemblies.assemblies_path, class: "main-bar__links-desktop__item", "aria-label": t("decidim.menu.help") do %>
+    <%= icon "group-2-line" %><span><%= t("decidim.menu.assemblies") %></span>
+  <% end %>
+</div>
+
+<div>
   <%= link_to decidim.pages_path, class: "main-bar__links-desktop__item", "aria-label": t("decidim.menu.help") do %>
     <%= icon "question-line" %><span><%= t("decidim.menu.help") %></span>
   <% end %>
