feat: restore default decidim styles for inhabitant card form (LIS-106)

--- a/decidim-module-gdynia/app/packs/stylesheets/decidim/gdynia/gdynia.scss
+++ b/decidim-module-gdynia/app/packs/stylesheets/decidim/gdynia/gdynia.scss
@@ -28,3 +28,10 @@
   max-width: 600px;
   font-size: 0.9rem;
 }
+
+/************* user account *************/
+
+.flash.warning .flash__message .author__verified {
+  display: inline-block;
+  vertical-align: text-bottom;
+}
