--- a/decidim-module-gdynia/app/views/decidim/gdynia/authorizations/show.html.erb
+++ b/decidim-module-gdynia/app/views/decidim/gdynia/authorizations/show.html.erb
@@ -2,43 +2,45 @@
 <% content_for(:subtitle) { t("inhabitant_card_authorization", scope: "layouts.decidim.user_profile") } %>
 
 <%= render layout: "layouts/decidim/shared/layout_user_profile" do %>
-  <div class="row">
-    <% if current_user.authorized_with_inhabitant_card? %>
-      <div class="card card--list">
-        <div class="card--list__item">
-          <div class="card--list__text">
-            <%= icon "circle-check", class: "card--list__icon", aria_label: t("inhabitant_card_authorization_success", scope: "layouts.decidim.user_profile"), role: "img" %>
-            <div>
-              <h5 class="card--list__heading">
-                <%= t("inhabitant_card_authorization", scope: "layouts.decidim.user_profile") %>
-              </h5>
-              <span class="text-small">
-                <%= t("inhabitant_card_authorization_text", scope: "layouts.decidim.user_profile") %>
-              </span>
-            </div>
-          </div>
-          <div class="card--list__data" aria-hidden="true">
-            <span class="card--list__data__icon">
-              <%= icon "circle-check", role: "img", "aria-hidden": true %>
+  <% if current_user.authorized_with_inhabitant_card? %>
+    <div class="card card--list">
+      <div class="card--list__item">
+        <div class="card--list__text">
+          <%= icon "circle-check", class: "card--list__icon", aria_label: t("inhabitant_card_authorization_success", scope: "layouts.decidim.user_profile"), role: "img" %>
+          <div>
+            <h5 class="card--list__heading">
+              <%= t("inhabitant_card_authorization", scope: "layouts.decidim.user_profile") %>
+            </h5>
+            <span class="text-small">
+              <%= t("inhabitant_card_authorization_text", scope: "layouts.decidim.user_profile") %>
             </span>
           </div>
         </div>
+        <div class="card--list__data" aria-hidden="true">
+          <span class="card--list__data__icon">
+            <%= icon "circle-check", role: "img", "aria-hidden": true %>
+          </span>
+        </div>
       </div>
-    <% else %>
-      <div class="callout announcement secondary">
+    </div>
+  <% else %>
+    <div class="flash warning" data-announcement>
+      <div class="flash__message block leading-relaxed">
         <p><%= t("layouts.decidim.user_profile.inhabitant_card_authorization_info", img: icon("verified-badge-line", class: "author__verified")).html_safe %></p>
       </div>
-      <%= decidim_form_for(@form, url: decidim_gdynia.inhabitant_cards_path, as: :inhabitant_card, html: { autocomplete: "off" }) do |f| %>
-        <input autocomplete="off" name="hidden" type="password" style="display:none;">
-        <div class="columns large-12 end">
-          <%= form_required_explanation %>
+    </div>
+    <%= decidim_form_for(@form, url: decidim_gdynia.inhabitant_cards_path, as: :inhabitant_card, html: { autocomplete: "off", class: "form-defaults" }) do |f| %>
+      <input autocomplete="off" name="hidden" type="password" style="display:none;">
+      <div class="form__wrapper pt-0">
+        <%= form_required_explanation %>
 
-          <%= f.number_field :card_number, label: t('.card_number') %>
-          <%= f.email_field :email, label: t('.email'), help_text: t('.email_hint') %>
+        <%= f.number_field :card_number, label: t('.card_number') %>
+        <%= f.email_field :email, label: t('.email'), help_text: t('.email_hint') %>
 
-          <%= f.submit t(".authenticate_account") %>
+        <div class="form__wrapper-block flex-col-reverse md:flex-row justify-between">
+          <%= f.submit t(".authenticate_account"), class: "button button__sm md:button__lg button__secondary mr-auto !ml-0" %>
         </div>
-      <% end %>
+      </div>
     <% end %>
-  </div>
+  <% end %>
 <% end %>
